--- a/app/src/main/res/layout/activity_videos.xml
+++ b/app/src/main/res/layout/activity_videos.xml
@@ -17,4 +17,11 @@
         android:layout_margin="10dp"
         android:contentDescription="@string/addVideo" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/videoRv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/row_video"/>
+
 </RelativeLayout>
