--- a/app/src/main/res/layout/row_video.xml
+++ b/app/src/main/res/layout/row_video.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black">
 
 <!--    VideoView: Play video-->
@@ -48,5 +48,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/downloadFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/delFab"
+        android:layout_marginEnd="18dp"
+        app:fabSize="mini"
+        android:src="@drawable/ic_save"
+        android:layout_marginBottom="5dp"
+        android:layout_alignParentEnd="true"
+        android:contentDescription="@string/save" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/delFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="80dp"
+        android:contentDescription="@string/delete"
+        android:src="@drawable/ic_delete"
+        app:fabSize="mini" />
 
 </RelativeLayout>
